# advent-of-code-2025

./: CMakeLists.txt  README.md  new.sh  run.sh  test.sh
day01/: main.c
day02/: day02.c  day02.h  day02_test.c  main.c
day03/: day03.c  day03.h  day03_test.c  main.c
template/: day.c  day.h  day_test.c  main.c
